--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-jslint": "^1.0.10",
     "gulp-lesshint": "^3.0.0",
     "gulp-uglify": "^2.1.2"
+    "gulp-jslint": "^1.0.10"
   },
   "scripts": {
     "setup": "npm install",
