--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-jslint": "^1.0.10",
     "gulp-lesshint": "^3.0.0",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^2.1.2",
     "gulp-jslint": "^1.0.10"
   },
   "scripts": {
