--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "Theme for ShopOrama",
   "main": "gulpfile.js",
   "dependencies": {
+    "bootstrap": "3.3.6",
+    "fastclick": "1.0.2",
     "gulp": "~3.9.1",
     "gulp-cli": "~1.2.2",
-    "gulp-less": "~3.3.0",
     "gulp-cssmin": "~0.1.7",
+    "gulp-less": "~3.3.0",
     "gulp-plumber": "~1.1.0",
-    "gulp-rename": "~1.2.2"
+    "gulp-rename": "~1.2.2",
+    "jquery": "1.11.1",
+    "jquery-autocompleter": "0.1.7",
+    "layzr.js": "2.2.2",
+    "owlcarousel-pre": "1.3.3",
+    "respond.js": "1.4.2"
   },
   "devDependencies": {
     "gulp-concat": "^2.6.1",
@@ -19,7 +26,10 @@
   },
   "scripts": {
     "setup": "npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "copy-js": "cp \"./node_modules/bootstrap/js/.\" ./__dev/scripts/bootstrap/ -a; cp \"./node_modules/fastclick/lib/fastclick.js\" ./__dev/scripts/libs/ -a; cp \"./node_modules/layzr/dist/layzr.js\" ./__dev/scripts/libs/ -a; cp \"./node_modules/owl.carousel/dist/owl.carousel.min.js\" ./__dev/scripts/libs/ -a;",
+    "copy-less": "cp \"./node_modules/bootstrap/less/.\" ./__dev/less/bootstrap/ -a; cp \"./node_modules/bootstrap/less/.\" ./__dev/less/bootstrap/ -a;",
+    "copy-owl-less": "cp \"./node_modules/owlcarousel-pre/owl-carousel/owl.carousel.css\" ./__dev/less/owl/owl.carousel.less; cp \"./node_modules/owlcarousel-pre/owl-carousel/owl.theme.css\" ./__dev/less/owl/owl.theme.less; cp \"./node_modules/owlcarousel-pre/owl-carousel/owl.transitions.css\" ./__dev/less/owl/owl.transitions.less; "
   },
   "repository": {
     "type": "git",
