--- a/theme_settings.ini
+++ b/theme_settings.ini
@@ -30,6 +30,10 @@ USP3ikon=list:-,Checkmark,Lightning,Lock,Piggiebank,Heart,Star,Gift,Globe
 USP4=string
 USP4ikon=list:-,Checkmark,Lightning,Lock,Piggiebank,Heart,Star,Gift,Globe
 
+[Caching]
+LevetidKategoriSide=string
+MinLevetidProduktTeaser=string
+MaxLevetidProduktTeaser=string
 
 [forside]
 Forsidebilledtekst=string
@@ -40,20 +44,17 @@ Overlayfarve=color
 Overlaygennemsigtighed=string
 Forsideproduktoverskrift=string
 
-[Instagramfeed]
-Aktivt=list:ja,nej
-Hashtag=string
-Tekst=string
-ClientID=string
+[ShopMessage]
+Aktiv=list:ja,nej
+Baggrundsfarve=color
+Tekstfarve=color
+Besked=string
 
 [Produktlister]
 Laegikurvfraliste=list:ja,nej
 Knaptekst_laesmere=string
 Knaptekst_koeb=string
 Knaptekst_ikkepaalager=string
-
-[OpenGraph]
-Standardbillede=image
 
 [Footer]
 Navn=string
@@ -64,6 +65,9 @@ Telefon=string
 Email=string
 CVR=string
 
+[OpenGraph]
+Standardbillede=image
+
 [SocialeMedieLinks]
 Overskrift=string
 GooglePlus=string
@@ -73,12 +77,11 @@ Instagram=string
 Pinterest=string
 Linkedin=string
 
-
-[ShopMessage]
-Aktiv=list:ja,nej
-Baggrundsfarve=color
-Tekstfarve=color
-Besked=string
+[Instagramfeed]
+Aktivt=list:ja,nej
+Hashtag=string
+Tekst=string
+ClientID=string
 
 [Nyhedsbrevspopup]
 Aktiv=list:Nej,Ja
