Added settings for all block caches

--- a/theme_settings.ini
+++ b/theme_settings.ini
@@ -31,6 +31,11 @@ USP4=string
 USP4ikon=list:-,Checkmark,Lightning,Lock,Piggiebank,Heart,Star,Gift,Globe
 
 [Caching]
+LevetidNavigation=string
+LevetidFooter=string
+LevetidForside=string
+LevetidSide=string
+LevetidLandingSide=string
 LevetidKategoriSide=string
 MinLevetidProduktTeaser=string
 MaxLevetidProduktTeaser=string
