--- a/theme_settings.ini
+++ b/theme_settings.ini
@@ -7,6 +7,7 @@ FavIcon=image
 HomescreenIcon=image
 Soegefelttekst=string
 Sitebaggrundsfarve=color
+NyhedIndtil=string
 GoogleTagManagerKode=string
 
 [Betalingskort]
