--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-cli": "~1.2.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "~0.1.7",
+    "gulp-headerfooter": "^1.0.3",
     "gulp-jslint": "^1.0.10",
     "gulp-less": "~3.3.0",
     "gulp-lesshint": "^3.0.0",
