Added shopreview functionality

--- a/theme_settings.ini
+++ b/theme_settings.ini
@@ -93,6 +93,11 @@ Instagram=string
 Pinterest=string
 Linkedin=string
 
+[Anmeldelse]
+Trustpilot=string
+Facebook=string
+GooglePlus=string
+
 [Nyhedsbrevspopup]
 Aktiv=list:Nej,Ja
 Forsinkelse=int
